Fix modal content overflowing page

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -592,6 +592,7 @@ footer > p {
 }
 
 .modal-content--container {
+  max-height: 85vh;
   max-width: 100%;
   overflow-y: auto;
 }
